# doublenot-bond

./: .gitignore  Cargo.toml  Makefile  README.md  install.ps1  install.sh
.bond/: IDENTITY.md  JOURNAL.md  PERSONALITY.md  config.yml  state.yml
.github/ISSUE_TEMPLATE/: bond-debug.md  bond-setup.md  bond-task.md
.github/workflows/: bond.yml  ci.yml  release.yml
docs/: workflows.md
docs/brainstorms/: 2026-04-04-generic-workflow-command-defaults-requirements.md  2026-04-06-scheduled-pr-feedback-priority-requirements.md  2026-04-07-bot-identity-and-release-publication-requirements.md
docs/ideation/: 2026-04-04-pre-commit-verification-ideation.md
docs/plans/: 2026-04-05-001-feat-generic-workflow-command-defaults-plan.md  2026-04-06-001-feat-scheduled-pr-feedback-priority-plan.md  2026-04-07-001-feat-bot-identity-release-publication-plan.md
scripts/: release-dry-run.sh  release-prep.sh
src/: agent.rs  bond.rs  cli.rs  commands.rs  main.rs  prompt.rs  repl.rs
tests/: bootstrap.rs  cli.rs  commands.rs  release.rs
