[package]
name = "doublenot-bond"
version = "0.1.0"
edition = "2021"
description = "A self-hosting coding agent that stores runtime identity inside .bond/."
license = "MIT"
readme = "README.md"

[[bin]]
name = "doublenot-bond"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
dotenvy = "0.15"
rustyline = "15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }
yoagent = { version = "0.7.5", features = ["openapi"] }

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = [
  "precommit-hook",
  "run-cargo-fmt",
  "run-cargo-clippy",
  "run-cargo-test",
] }
tempfile = "3.10.1"
